5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4357/executions/1771_3121.log
== SUBMITION (2019-05-28 21:11:44) 
-- CODE:
from numpy import*
eusapia=array(eval(input("digite o numero:")))
barsanulfo=array(eval(input("digite o numero:")))
i=0
somae=0
somab=0
while(i<size(eupasia)):
print(size(e))
	if((eupasia[i]==33 and barsanulfo[i]==22) or (eupasia[i]==22 and basnulfo==11) or (eupasia[i]==11 and basnulfo==33)):
		print("EUPASIA")
	elif((eupasia[i]==22 and barsanulfo[i]==33) or (eupasia[i]==11 and basnulfo==22) or (eupasia[i]==33 and basnulfo==11)):
		print("BARSANULFO")
	elif((eupasia[i]==11 and barsanulfo[i]==11) or (eupasia[i]==22 and basnulfo==22)or (eupasia[i]==33 and basnulfo==33)):
		print("EMPATE")
-- EXECUTION TIME:
0.151887
-- ERROR:
  File "/home/codebench/codes/1771/3121/main.py", line 8
    print(size(e))
        ^
IndentationError: expected an indented block

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-28 21:11:47) 
-- CODE:
from numpy import*
eusapia=array(eval(input("digite o numero:")))
barsanulfo=array(eval(input("digite o numero:")))
i=0
somae=0
somab=0
while(i<size(eupasia)):
print(size(e))
	if((eupasia[i]==33 and barsanulfo[i]==22) or (eupasia[i]==22 and basnulfo==11) or (eupasia[i]==11 and basnulfo==33)):
		print("EUPASIA")
	elif((eupasia[i]==22 and barsanulfo[i]==33) or (eupasia[i]==11 and basnulfo==22) or (eupasia[i]==33 and basnulfo==11)):
		print("BARSANULFO")
	elif((eupasia[i]==11 and barsanulfo[i]==11) or (eupasia[i]==22 and basnulfo==22)or (eupasia[i]==33 and basnulfo==33)):
		print("EMPATE")
-- EXECUTION TIME:
0.215948
-- ERROR:
  File "/home/codebench/codes/1771/3121/main.py", line 8
    print(size(e))
        ^
IndentationError: expected an indented block

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 21:11:52) 
-- CODE:
from numpy import*
eusapia=array(eval(input("digite o numero:")))
barsanulfo=array(eval(input("digite o numero:")))
i=0
somae=0
somab=0
while(i<size(eupasia)):
print(size(e))
	if((eupasia[i]==33 and barsanulfo[i]==22) or (eupasia[i]==22 and basnulfo==11) or (eupasia[i]==11 and basnulfo==33)):
		print("EUPASIA")
	elif((eupasia[i]==22 and barsanulfo[i]==33) or (eupasia[i]==11 and basnulfo==22) or (eupasia[i]==33 and basnulfo==11)):
		print("BARSANULFO")
	elif((eupasia[i]==11 and barsanulfo[i]==11) or (eupasia[i]==22 and basnulfo==22)or (eupasia[i]==33 and basnulfo==33)):
		print("EMPATE")
-- ERROR:
File "XXXX", line 8
    print(size(e))
        ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 21:12:41) 
-- CODE:
from numpy import*
eusapia=array(eval(input("digite o numero:")))
barsanulfo=array(eval(input("digite o numero:")))
i=0
somae=0
somab=0
while(i<size(eupasia)):
	if((eupasia[i]==33 and barsanulfo[i]==22) or (eupasia[i]==22 and basnulfo==11) or (eupasia[i]==11 and basnulfo==33)):
		print("EUPASIA")
	elif((eupasia[i]==22 and barsanulfo[i]==33) or (eupasia[i]==11 and basnulfo==22) or (eupasia[i]==33 and basnulfo==11)):
		print("BARSANULFO")
	elif((eupasia[i]==11 and barsanulfo[i]==11) or (eupasia[i]==22 and basnulfo==22)or (eupasia[i]==33 and basnulfo==33)):
		print("EMPATE")
print(size(e))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-28 21:12:49) 
-- CODE:
from numpy import*
eusapia=array(eval(input("digite o numero:")))
barsanulfo=array(eval(input("digite o numero:")))
i=0
somae=0
somab=0
while(i<size(eupasia)):
	if((eupasia[i]==33 and barsanulfo[i]==22) or (eupasia[i]==22 and basnulfo==11) or (eupasia[i]==11 and basnulfo==33)):
		print("EUPASIA")
	elif((eupasia[i]==22 and barsanulfo[i]==33) or (eupasia[i]==11 and basnulfo==22) or (eupasia[i]==33 and basnulfo==11)):
		print("BARSANULFO")
	elif((eupasia[i]==11 and barsanulfo[i]==11) or (eupasia[i]==22 and basnulfo==22)or (eupasia[i]==33 and basnulfo==33)):
		print("EMPATE")
print(size(e))
-- EXECUTION TIME:
0.540823
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1771/3121/main.py", line 7, in <module>
    while(i<size(eupasia)):
NameError: name 'eupasia' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 21:14:25) 
-- CODE:
from numpy import*
eusapia=array(eval(input("digite o numero:")))
barsanulfo=array(eval(input("digite o numero:")))
i=0
somae=0
somab=0
while(i<size(eupasia)):
	if((eupasia[i]==33 and barsanulfo[i]==22) or (eupasia[i]==22 and basnulfo==11) or (eupasia[i]==11 and basnulfo==33)):
		i=i+1
		print("EUPASIA")
	elif((eupasia[i]==22 and barsanulfo[i]==33) or (eupasia[i]==11 and basnulfo==22) or (eupasia[i]==33 and basnulfo==11)):
		i=i+1
		print("BARSANULFO")
	elif((eupasia[i]==11 and barsanulfo[i]==11) or (eupasia[i]==22 and basnulfo==22)or (eupasia[i]==33 and basnulfo==33)):
		i=i+1
		print("EMPATE")
print(size(e))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-28 21:16:49) 
-- CODE:
from numpy import*
eusapia=array(eval(input("digite o numero:")))
barsanulfo=array(eval(input("digite o numero:")))
i=0
valore=0
valorb=0
somae=0
somab=0
while(i<size(eupasia)):
	if((eupasia[i]==33 and barsanulfo[i]==22) or (eupasia[i]==22 and basnulfo==11) or (eupasia[i]==11 and basnulfo==33)):
		i=i+1
		print("EUPASIA")
	elif((eupasia[i]==22 and barsanulfo[i]==33) or (eupasia[i]==11 and basnulfo==22) or (eupasia[i]==33 and basnulfo==11)):
		i=i+1
		print("BARSANULFO")
	elif((eupasia[i]==11 and barsanulfo[i]==11) or (eupasia[i]==22 and basnulfo==22)or (eupasia[i]==33 and basnulfo==33)):
		i=i+1
		print("EMPATE")
		somae=somae+valorb
		somab=somab+valore
print(size(e))
-- EXECUTION TIME:
0.478635
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1771/3121/main.py", line 9, in <module>
    while(i<size(eupasia)):
NameError: name 'eupasia' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-28 21:16:51) 
-- CODE:
from numpy import*
eusapia=array(eval(input("digite o numero:")))
barsanulfo=array(eval(input("digite o numero:")))
i=0
valore=0
valorb=0
somae=0
somab=0
while(i<size(eupasia)):
	if((eupasia[i]==33 and barsanulfo[i]==22) or (eupasia[i]==22 and basnulfo==11) or (eupasia[i]==11 and basnulfo==33)):
		i=i+1
		print("EUPASIA")
	elif((eupasia[i]==22 and barsanulfo[i]==33) or (eupasia[i]==11 and basnulfo==22) or (eupasia[i]==33 and basnulfo==11)):
		i=i+1
		print("BARSANULFO")
	elif((eupasia[i]==11 and barsanulfo[i]==11) or (eupasia[i]==22 and basnulfo==22)or (eupasia[i]==33 and basnulfo==33)):
		i=i+1
		print("EMPATE")
		somae=somae+valorb
		somab=somab+valore
print(size(e))
-- EXECUTION TIME:
0.396982
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1771/3121/main.py", line 9, in <module>
    while(i<size(eupasia)):
NameError: name 'eupasia' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 21:16:52) 
-- CODE:
from numpy import*
eusapia=array(eval(input("digite o numero:")))
barsanulfo=array(eval(input("digite o numero:")))
i=0
valore=0
valorb=0
somae=0
somab=0
while(i<size(eupasia)):
	if((eupasia[i]==33 and barsanulfo[i]==22) or (eupasia[i]==22 and basnulfo==11) or (eupasia[i]==11 and basnulfo==33)):
		i=i+1
		print("EUPASIA")
	elif((eupasia[i]==22 and barsanulfo[i]==33) or (eupasia[i]==11 and basnulfo==22) or (eupasia[i]==33 and basnulfo==11)):
		i=i+1
		print("BARSANULFO")
	elif((eupasia[i]==11 and barsanulfo[i]==11) or (eupasia[i]==22 and basnulfo==22)or (eupasia[i]==33 and basnulfo==33)):
		i=i+1
		print("EMPATE")
		somae=somae+valorb
		somab=somab+valore
print(size(e))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-28 21:17:34) 
-- CODE:
from numpy import*
eusapia=array(eval(input("digite o numero:")))
barsanulfo=array(eval(input("digite o numero:")))
i=0
valore=0
valorb=0
somae=0
somab=0
while(i<size(eupasia+barsanulfo)):
	if((eupasia[i]==33 and barsanulfo[i]==22) or (eupasia[i]==22 and basnulfo==11) or (eupasia[i]==11 and basnulfo==33)):
		i=i+1
		print("EUPASIA")
	elif((eupasia[i]==22 and barsanulfo[i]==33) or (eupasia[i]==11 and basnulfo==22) or (eupasia[i]==33 and basnulfo==11)):
		i=i+1
		print("BARSANULFO")
	elif((eupasia[i]==11 and barsanulfo[i]==11) or (eupasia[i]==22 and basnulfo==22)or (eupasia[i]==33 and basnulfo==33)):
		i=i+1
		print("EMPATE")
		somae=somae+valorb
		somab=somab+valore
print(size(e))
-- EXECUTION TIME:
0.599408
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1771/3121/main.py", line 9, in <module>
    while(i<size(eupasia+barsanulfo)):
NameError: name 'eupasia' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 21:17:35) 
-- CODE:
from numpy import*
eusapia=array(eval(input("digite o numero:")))
barsanulfo=array(eval(input("digite o numero:")))
i=0
valore=0
valorb=0
somae=0
somab=0
while(i<size(eupasia+barsanulfo)):
	if((eupasia[i]==33 and barsanulfo[i]==22) or (eupasia[i]==22 and basnulfo==11) or (eupasia[i]==11 and basnulfo==33)):
		i=i+1
		print("EUPASIA")
	elif((eupasia[i]==22 and barsanulfo[i]==33) or (eupasia[i]==11 and basnulfo==22) or (eupasia[i]==33 and basnulfo==11)):
		i=i+1
		print("BARSANULFO")
	elif((eupasia[i]==11 and barsanulfo[i]==11) or (eupasia[i]==22 and basnulfo==22)or (eupasia[i]==33 and basnulfo==33)):
		i=i+1
		print("EMPATE")
		somae=somae+valorb
		somab=somab+valore
print(size(e))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-28 21:18:06) 
-- CODE:
from numpy import*
eusapia=array(eval(input("digite o numero:")))
barsanulfo=array(eval(input("digite o numero:")))
i=0
valore=0
valorb=0
somae=0
somab=0
while(i<size(eusapia)):
	if((eupasia[i]==33 and barsanulfo[i]==22) or (eupasia[i]==22 and basnulfo==11) or (eupasia[i]==11 and basnulfo==33)):
		i=i+1
		print("EUPASIA")
	elif((eupasia[i]==22 and barsanulfo[i]==33) or (eupasia[i]==11 and basnulfo==22) or (eupasia[i]==33 and basnulfo==11)):
		i=i+1
		print("BARSANULFO")
	elif((eupasia[i]==11 and barsanulfo[i]==11) or (eupasia[i]==22 and basnulfo==22)or (eupasia[i]==33 and basnulfo==33)):
		i=i+1
		print("EMPATE")
		somae=somae+valorb
		somab=somab+valore
print(size(e))
-- EXECUTION TIME:
0.351326
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1771/3121/main.py", line 10, in <module>
    if((eupasia[i]==33 and barsanulfo[i]==22) or (eupasia[i]==22 and basnulfo==11) or (eupasia[i]==11 and basnulfo==33)):
NameError: name 'eupasia' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-28 21:18:10) 
-- CODE:
from numpy import*
eusapia=array(eval(input("digite o numero:")))
barsanulfo=array(eval(input("digite o numero:")))
i=0
valore=0
valorb=0
somae=0
somab=0
while(i<size(eusapia)):
	if((eupasia[i]==33 and barsanulfo[i]==22) or (eupasia[i]==22 and basnulfo==11) or (eupasia[i]==11 and basnulfo==33)):
		i=i+1
		print("EUPASIA")
	elif((eupasia[i]==22 and barsanulfo[i]==33) or (eupasia[i]==11 and basnulfo==22) or (eupasia[i]==33 and basnulfo==11)):
		i=i+1
		print("BARSANULFO")
	elif((eupasia[i]==11 and barsanulfo[i]==11) or (eupasia[i]==22 and basnulfo==22)or (eupasia[i]==33 and basnulfo==33)):
		i=i+1
		print("EMPATE")
		somae=somae+valorb
		somab=somab+valore
print(size(e))
-- EXECUTION TIME:
0.425748
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1771/3121/main.py", line 10, in <module>
    if((eupasia[i]==33 and barsanulfo[i]==22) or (eupasia[i]==22 and basnulfo==11) or (eupasia[i]==11 and basnulfo==33)):
NameError: name 'eupasia' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 21:18:11) 
-- CODE:
from numpy import*
eusapia=array(eval(input("digite o numero:")))
barsanulfo=array(eval(input("digite o numero:")))
i=0
valore=0
valorb=0
somae=0
somab=0
while(i<size(eusapia)):
	if((eupasia[i]==33 and barsanulfo[i]==22) or (eupasia[i]==22 and basnulfo==11) or (eupasia[i]==11 and basnulfo==33)):
		i=i+1
		print("EUPASIA")
	elif((eupasia[i]==22 and barsanulfo[i]==33) or (eupasia[i]==11 and basnulfo==22) or (eupasia[i]==33 and basnulfo==11)):
		i=i+1
		print("BARSANULFO")
	elif((eupasia[i]==11 and barsanulfo[i]==11) or (eupasia[i]==22 and basnulfo==22)or (eupasia[i]==33 and basnulfo==33)):
		i=i+1
		print("EMPATE")
		somae=somae+valorb
		somab=somab+valore
print(size(e))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-28 21:20:16) 
-- CODE:
from numpy import*
eusapia=array(eval(input("digite o numero:")))
barsanulfo=array(eval(input("digite o numero:")))
i=0
valore=0
valorb=0
somae=0
somab=0
while(i<size(eusapia)):
	if((eusapia[i]==33 and barsanulfo[i]==22) or (eusapia[i]==22 and basnulfo==11) or (eusapia[i]==11 and basnulfo==33)):
		i=i+1
		print("EUSAPIA")
	elif((eusapia[i]==22 and barsanulfo[i]==33) or (eusapia[i]==11 and basnulfo==22) or (eusapia[i]==33 and basnulfo==11)):
		i=i+1
		print("BARSANULFO")
	elif((eusapia[i]==11 and barsanulfo[i]==11) or (eusapia[i]==22 and basnulfo==22)or (eusapia[i]==33 and basnulfo==33)):
		i=i+1
		print("EMPATE")
		somae=somae+valorb
		somab=somab+valore
print(size(e))
-- EXECUTION TIME:
0.372544
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1771/3121/main.py", line 10, in <module>
    if((eusapia[i]==33 and barsanulfo[i]==22) or (eusapia[i]==22 and basnulfo==11) or (eusapia[i]==11 and basnulfo==33)):
NameError: name 'basnulfo' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 21:20:19) 
-- CODE:
from numpy import*
eusapia=array(eval(input("digite o numero:")))
barsanulfo=array(eval(input("digite o numero:")))
i=0
valore=0
valorb=0
somae=0
somab=0
while(i<size(eusapia)):
	if((eusapia[i]==33 and barsanulfo[i]==22) or (eusapia[i]==22 and basnulfo==11) or (eusapia[i]==11 and basnulfo==33)):
		i=i+1
		print("EUSAPIA")
	elif((eusapia[i]==22 and barsanulfo[i]==33) or (eusapia[i]==11 and basnulfo==22) or (eusapia[i]==33 and basnulfo==11)):
		i=i+1
		print("BARSANULFO")
	elif((eusapia[i]==11 and barsanulfo[i]==11) or (eusapia[i]==22 and basnulfo==22)or (eusapia[i]==33 and basnulfo==33)):
		i=i+1
		print("EMPATE")
		somae=somae+valorb
		somab=somab+valore
print(size(e))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 21:22:43) 
-- CODE:
from numpy import*
eusapia=array(eval(input("digite o numero:")))
barsanulfo=array(eval(input("digite o numero:")))
i=0
valore=0
valorb=0
somae=0
somab=0
while(i<size(eusapia)):
	if((eusapia[i]==33 and barsanulfo[i]==22) or (eusapia[i]==22 and basnulfo==11) or (eusapia[i]==11 and basnulfo==33)):
		i=i+1
		print("EUSAPIA")
	elif((eusapia[i]==22 and barsanulfo[i]==33) or (eusapia[i]==11 and basnulfo==22) or (eusapia[i]==33 and basnulfo==11)):
		i=i+1
		print("BARSANULFO")
	else:
		i=i+1
		print("EMPATE")
		somae=somae+valorb
		somab=somab+valore
print(size(e))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 21:23:25) 
-- CODE:
from numpy import*
eusapia=int(input("digite o numero:")))
barsanulfo=int(input("digite o numero:")))
i=0
valore=0
valorb=0
somae=0
somab=0
while(i<size(eusapia)):
	if((eusapia[i]==33 and barsanulfo[i]==22) or (eusapia[i]==22 and basnulfo==11) or (eusapia[i]==11 and basnulfo==33)):
		i=i+1
		print("EUSAPIA")
	elif((eusapia[i]==22 and barsanulfo[i]==33) or (eusapia[i]==11 and basnulfo==22) or (eusapia[i]==33 and basnulfo==11)):
		i=i+1
		print("BARSANULFO")
	else:
		i=i+1
		print("EMPATE")
		somae=somae+valorb
		somab=somab+valore
print(size(e))
-- ERROR:
File "XXXX", line 2
    eusapia=int(input()))
                        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-28 21:23:39) 
-- CODE:
from numpy import*
eusapia=int(input("digite o numero:"))
barsanulfo=int(input("digite o numero:"))
i=0
valore=0
valorb=0
somae=0
somab=0
while(i<size(eusapia)):
	if((eusapia[i]==33 and barsanulfo[i]==22) or (eusapia[i]==22 and basnulfo==11) or (eusapia[i]==11 and basnulfo==33)):
		i=i+1
		print("EUSAPIA")
	elif((eusapia[i]==22 and barsanulfo[i]==33) or (eusapia[i]==11 and basnulfo==22) or (eusapia[i]==33 and basnulfo==11)):
		i=i+1
		print("BARSANULFO")
	else:
		i=i+1
		print("EMPATE")
		somae=somae+valorb
		somab=somab+valore
print(size(e))
-- EXECUTION TIME:
0.355847
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1771/3121/main.py", line 2, in <module>
    eusapia=int(input())
ValueError: invalid literal for int() with base 10: '[33,22,33,22,11,11,33,22,11,11,22,33]'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 21:23:42) 
-- CODE:
from numpy import*
eusapia=int(input("digite o numero:"))
barsanulfo=int(input("digite o numero:"))
i=0
valore=0
valorb=0
somae=0
somab=0
while(i<size(eusapia)):
	if((eusapia[i]==33 and barsanulfo[i]==22) or (eusapia[i]==22 and basnulfo==11) or (eusapia[i]==11 and basnulfo==33)):
		i=i+1
		print("EUSAPIA")
	elif((eusapia[i]==22 and barsanulfo[i]==33) or (eusapia[i]==11 and basnulfo==22) or (eusapia[i]==33 and basnulfo==11)):
		i=i+1
		print("BARSANULFO")
	else:
		i=i+1
		print("EMPATE")
		somae=somae+valorb
		somab=somab+valore
print(size(e))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-28 21:24:11) 
-- CODE:
from numpy import*
eusapia=float(input("digite o numero:"))
barsanulfo=float(input("digite o numero:"))
i=0
valore=0
valorb=0
somae=0
somab=0
while(i<size(eusapia)):
	if((eusapia[i]==33 and barsanulfo[i]==22) or (eusapia[i]==22 and basnulfo==11) or (eusapia[i]==11 and basnulfo==33)):
		i=i+1
		print("EUSAPIA")
	elif((eusapia[i]==22 and barsanulfo[i]==33) or (eusapia[i]==11 and basnulfo==22) or (eusapia[i]==33 and basnulfo==11)):
		i=i+1
		print("BARSANULFO")
	else:
		i=i+1
		print("EMPATE")
		somae=somae+valorb
		somab=somab+valore
print(size(e))
-- EXECUTION TIME:
0.367298
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1771/3121/main.py", line 2, in <module>
    eusapia=float(input())
ValueError: could not convert string to float: '[33,22,33,22,11,11,33,22,11,11,22,33]'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 21:24:23) 
-- CODE:
from numpy import*
eusapia=float(input("digite o numero:"))
barsanulfo=float(input("digite o numero:"))
i=0
valore=0
valorb=0
somae=0
somab=0
while(i<size(eusapia)):
	if((eusapia[i]==33 and barsanulfo[i]==22) or (eusapia[i]==22 and basnulfo==11) or (eusapia[i]==11 and basnulfo==33)):
		i=i+1
		print("EUSAPIA")
	elif((eusapia[i]==22 and barsanulfo[i]==33) or (eusapia[i]==11 and basnulfo==22) or (eusapia[i]==33 and basnulfo==11)):
		i=i+1
		print("BARSANULFO")
	else:
		i=i+1
		print("EMPATE")
		somae=somae+valorb
		somab=somab+valore
print(size(e))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-28 21:32:20) 
-- CODE:
from numpy import*
eusapia=array(eval(input("digite o numero:)))
barsanulfo=array(eval(input("digite o numero:")))
i=0
valore=0
valorb=0
somae=0
somab=0
while(i<size(eusapia)):
	if(eusapia[i]==33 and barsanulfo[i]==22):
		valore=1
		valorb=0
	elif(eusapia[i]==22 and basnulfo==11):
		valore=1
		valorb=0
	elif(eusapia[i]==11 and basnulfo==33)):
		valore=1
		valorb=0
	print("EUSAPIA")
	elif(eusapia[i]==22 and barsanulfo[i]==33):
		valore=0
		valorb=1
	elif(eusapia[i]==11 and basnulfo==22):
		valore=0
		valorb=1
	elif(eusapia[i]==33 and basnulfo==11)):
		valore=0
		valorb=1
		print("BARSANULFO")
	else:
		print("EMPATE")
		somae=somae+valorb
		somab=somab+valore
		i=i+1
print(size(e))
-- EXECUTION TIME:
0.275907
-- ERROR:
  File "/home/codebench/codes/1771/3121/main.py", line 2
    eusapia=array(eval(input("digite o numero:)))
                                                ^
SyntaxError: EOL while scanning string literal

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 21:32:23) 
-- CODE:
from numpy import*
eusapia=array(eval(input("digite o numero:)))
barsanulfo=array(eval(input("digite o numero:")))
i=0
valore=0
valorb=0
somae=0
somab=0
while(i<size(eusapia)):
	if(eusapia[i]==33 and barsanulfo[i]==22):
		valore=1
		valorb=0
	elif(eusapia[i]==22 and basnulfo==11):
		valore=1
		valorb=0
	elif(eusapia[i]==11 and basnulfo==33)):
		valore=1
		valorb=0
	print("EUSAPIA")
	elif(eusapia[i]==22 and barsanulfo[i]==33):
		valore=0
		valorb=1
	elif(eusapia[i]==11 and basnulfo==22):
		valore=0
		valorb=1
	elif(eusapia[i]==33 and basnulfo==11)):
		valore=0
		valorb=1
		print("BARSANULFO")
	else:
		print("EMPATE")
		somae=somae+valorb
		somab=somab+valore
		i=i+1
print(size(e))
-- ERROR:
File "XXXX", line 2
    eusapia=array(eval(input("digite o numero:)))
                                                ^
SyntaxError: EOL while scanning string literal
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-28 21:33:30) 
-- CODE:
from numpy import*
eusapia=array(eval(input("digite o numero:")))
barsanulfo=array(eval(input("digite o numero:")))
i=0
valore=0
valorb=0
somae=0
somab=0
while(i<size(eusapia)):
	if(eusapia[i]==33 and barsanulfo[i]==22):
		valore=1
		valorb=0
	elif(eusapia[i]==22 and basnulfo==11):
		valore=1
		valorb=0
	elif(eusapia[i]==11 and basnulfo==33)):
		valore=1
		valorb=0
	print("EUSAPIA")
	elif(eusapia[i]==22 and barsanulfo[i]==33):
		valore=0
		valorb=1
	elif(eusapia[i]==11 and basnulfo==22):
		valore=0
		valorb=1
	elif(eusapia[i]==33 and basnulfo==11)):
		valore=0
		valorb=1
		print("BARSANULFO")
	else:
		print("EMPATE")
		somae=somae+valorb
		somab=somab+valore
		i=i+1
print(size(e))
-- EXECUTION TIME:
0.143036
-- ERROR:
  File "/home/codebench/codes/1771/3121/main.py", line 16
    elif(eusapia[i]==11 and basnulfo==33)):
                                         ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 21:33:34) 
-- CODE:
from numpy import*
eusapia=array(eval(input("digite o numero:")))
barsanulfo=array(eval(input("digite o numero:")))
i=0
valore=0
valorb=0
somae=0
somab=0
while(i<size(eusapia)):
	if(eusapia[i]==33 and barsanulfo[i]==22):
		valore=1
		valorb=0
	elif(eusapia[i]==22 and basnulfo==11):
		valore=1
		valorb=0
	elif(eusapia[i]==11 and basnulfo==33)):
		valore=1
		valorb=0
	print("EUSAPIA")
	elif(eusapia[i]==22 and barsanulfo[i]==33):
		valore=0
		valorb=1
	elif(eusapia[i]==11 and basnulfo==22):
		valore=0
		valorb=1
	elif(eusapia[i]==33 and basnulfo==11)):
		valore=0
		valorb=1
		print("BARSANULFO")
	else:
		print("EMPATE")
		somae=somae+valorb
		somab=somab+valore
		i=i+1
print(size(e))
-- ERROR:
File "XXXX", line 16
    elif(eusapia[i]==11 and basnulfo==33)):
                                         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 21:33:43) 
-- CODE:
from numpy import*
eusapia=array(eval(input("digite o numero:")))
barsanulfo=array(eval(input("digite o numero:")))
i=0
valore=0
valorb=0
somae=0
somab=0
while(i<size(eusapia)):
	if(eusapia[i]==33 and barsanulfo[i]==22):
		valore=1
		valorb=0
	elif(eusapia[i]==22 and basnulfo==11):
		valore=1
		valorb=0
	elif(eusapia[i]==11 and basnulfo==33)):
		valore=1
		valorb=0
	print("EUSAPIA")
	elif(eusapia[i]==22 and barsanulfo[i]==33):
		valore=0
		valorb=1
	elif(eusapia[i]==11 and basnulfo==22):
		valore=0
		valorb=1
	elif(eusapia[i]==33 and basnulfo==11)):
		valore=0
		valorb=1
		print("BARSANULFO")
	else:
		print("EMPATE")
		somae=somae+valorb
		somab=somab+valore
		i=i+1
print(size(e))
-- ERROR:
File "XXXX", line 16
    elif(eusapia[i]==11 and basnulfo==33)):
                                         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-28 21:34:19) 
-- CODE:
from numpy import*
eusapia=array(eval(input("digite o numero:")))
barsanulfo=array(eval(input("digite o numero:")))
i=0
valore=0
valorb=0
somae=0
somab=0
while(i<size(eusapia)):
	if(eusapia[i]==33 and barsanulfo[i]==22):
		valore=1
		valorb=0
	elif(eusapia[i]==22 and basnulfo==11):
		valore=1
		valorb=0
	elif(eusapia[i]==11 and basnulfo==33):
		valore=1
		valorb=0
	print("EUSAPIA")
	elif(eusapia[i]==22 and barsanulfo[i]==33):
		valore=0
		valorb=1
	elif(eusapia[i]==11 and basnulfo==22):
		valore=0
		valorb=1
	elif(eusapia[i]==33 and basnulfo==11)):
		valore=0
		valorb=1
		print("BARSANULFO")
	else:
		print("EMPATE")
		somae=somae+valorb
		somab=somab+valore
		i=i+1
print(size(e))
-- EXECUTION TIME:
0.152677
-- ERROR:
  File "/home/codebench/codes/1771/3121/main.py", line 20
    elif(eusapia[i]==22 and barsanulfo[i]==33):
       ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 21:34:24) 
-- CODE:
from numpy import*
eusapia=array(eval(input("digite o numero:")))
barsanulfo=array(eval(input("digite o numero:")))
i=0
valore=0
valorb=0
somae=0
somab=0
while(i<size(eusapia)):
	if(eusapia[i]==33 and barsanulfo[i]==22):
		valore=1
		valorb=0
	elif(eusapia[i]==22 and basnulfo==11):
		valore=1
		valorb=0
	elif(eusapia[i]==11 and basnulfo==33):
		valore=1
		valorb=0
	print("EUSAPIA")
	elif(eusapia[i]==22 and barsanulfo[i]==33):
		valore=0
		valorb=1
	elif(eusapia[i]==11 and basnulfo==22):
		valore=0
		valorb=1
	elif(eusapia[i]==33 and basnulfo==11)):
		valore=0
		valorb=1
		print("BARSANULFO")
	else:
		print("EMPATE")
		somae=somae+valorb
		somab=somab+valore
		i=i+1
print(size(e))
-- ERROR:
File "XXXX", line 20
    elif(eusapia[i]==22 and barsanulfo[i]==33):
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 21:36:07) 
-- CODE:
from numpy import*
eusapia=array(eval(input("digite o numero:")))
barsanulfo=array(eval(input("digite o numero:")))
i=0
valore=0
valorb=0
somae=0
somab=0
while(i<size(eusapia)):
	if(eusapia[i]==33 and barsanulfo[i]==22):
		valore=1
		valorb=0
	elif(eusapia[i]==22 and basnulfo==11):
		valore=1
		valorb=0
	elif(eusapia[i]==11 and basnulfo==33):
		valore=1
		valorb=0
	print("EUSAPIA")
	elif(eusapia[i]==22 and barsanulfo[i]==33):
		valorb=0
		valore=1
	elif(eusapia[i]==11 and basnulfo==22):
		valore=0
		valorb=1
	elif(eusapia[i]==33 and basnulfo==11)):
		valore=0
		valorb=1
		print("BARSANULFO")
	else:
		print("EMPATE")
		somae=somae+valorb
		somab=somab+valore
		i=i+1
print(size(e))
-- ERROR:
File "XXXX", line 20
    elif(eusapia[i]==22 and barsanulfo[i]==33):
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 21:37:07) 
-- CODE:
from numpy import*
eusapia=array(eval(input("digite o numero:")))
barsanulfo=array(eval(input("digite o numero:")))
i=0
valore=0
valorb=0
somae=0
somab=0
while(i<size(eusapia)):
	if(eusapia[i]==33 and barsanulfo[i]==22):
		valore=1
		valorb=0
	elif(eusapia[i]==22 and basnulfo==11):
		valore=1
		valorb=0
	elif(eusapia[i]==11 and basnulfo==33):
		valore=1
		valorb=0
	print("EUSAPIA")
	elif(eusapia[i]==22 and barsanulfo[i]==33):
		valorb=0
		valore=1
	elif(eusapia[i]==11 and basnulfo==22):
		valore=0
		valorb=1
	elif(eusapia[i]==33 and basnulfo==11):
		valore=0
		valorb=1
		print("BARSANULFO")
	else:
		print("EMPATE")
		somae=somae+valorb
		somab=somab+valore
		i=i+1
print(size(e))
-- ERROR:
File "XXXX", line 20
    elif(eusapia[i]==22 and barsanulfo[i]==33):
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 21:37:50) 
-- CODE:
from numpy import*
eusapia=array(eval(input("digite o numero:")))
barsanulfo=array(eval(input("digite o numero:")))
i=0
valore=0
valorb=0
somae=0
somab=0
while(i<size(eusapia)):
	if(eusapia[i]==33 and barsanulfo[i]==22):
		valore=1
		valorb=0
	elif(eusapia[i]==22 and basnulfo==11):
		valore=1
		valorb=0
	elif(eusapia[i]==11 and basnulfo==33):
		valore=1
		valorb=0
	print("EUSAPIA")
	elif(eusapia[i]==22 and barsanulfo[i]==33):
		valorb=1
		valore=0
	elif(eusapia[i]==11 and basnulfo==22):
		valore=0
		valorb=1
	elif(eusapia[i]==33 and basnulfo==11):
		valore=0
		valorb=1
		print("BARSANULFO")
	else:
		print("EMPATE")
		somae=somae+valorb
		somab=somab+valore
		i=i+1
print(size(e))
-- ERROR:
File "XXXX", line 20
    elif(eusapia[i]==22 and barsanulfo[i]==33):
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 21:39:12) 
-- CODE:
from numpy import*
eusapia=array(eval(input("digite o numero:")))
barsanulfo=array(eval(input("digite o numero:")))
i=0
valore=0
valorb=0
somae=0
somab=0
while(i<size(eusapia)):
	if(eusapia[i]==33 and barsanulfo[i]==22):
		valore=1
		valorb=0
	elif(eusapia[i]==22 and basnulfo==11):
		valore=1
		valorb=0
	elif(eusapia[i]==11 and basnulfo==33):
		valore=1
		valorb=0
	elif(eusapia[i]==22 and barsanulfo[i]==33):
		valorb=1
		valore=0
	elif(eusapia[i]==11 and basnulfo==22):
		valore=0
		valorb=1
	elif(eusapia[i]==33 and basnulfo==11):
		valore=0
		valorb=1
	else:
		print("EMPATE")
		somae=somae+valorb
		somab=somab+valore
		i=i+1
print(size(e))
print("EUSAPIA")
print("BARSANULFO")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 21:42:32) 
-- CODE:
from numpy import*
eusapia=array(eval(input("digite o numero:")))
barsanulfo=array(eval(input("digite o numero:")))
i=0
valore=0
valorb=0
somae=0
somab=0
while(i<size(eusapia)):
	if(eusapia[i]==33 and barsanulfo[i]==22):
		valore=1
		valorb=0
	elif(eusapia[i]==22 and barsanulfo==11):
		valore=1
		valorb=0
	elif(eusapia[i]==11 and barsanulfo==33):
		valore=1
		valorb=0
	elif(eusapia[i]==22 and barsanulfo[i]==33):
		valorb=1
		valore=0
	elif(eusapia[i]==11 and barsanulfo==22):
		valore=0
		valorb=1
	elif(eusapia[i]==33 and barsanulfo==11):
		valore=0
		valorb=1
	else:
		print("EMPATE")
		somae=somae+valorb
		somab=somab+valore
		i=i+1
print(size(e))
print("EUSAPIA")
print("BARSANULFO")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-28 21:51:03) 
-- CODE:
from numpy import*
eusapia=array(eval(input("digite o numero:")))
barsanulfo=array(eval(input("digite o numero:")))
i=0
valore=0
valorb=0
somae=0
somab=0
while(i<size(eusapia)):
	if(eusapia[i]==33 and barsanulfo[i]==22):
		valore=1
		valorb=0
	elif(eusapia[i]==22 and basnulfo==11):
		valore=1
		valorb=0
	elif(eusapia[i]==11 and basnulfo==33):
		valore=1
		valorb=0
	elif(eusapia[i]==22 and barsanulfo[i]==33):
		valorb=1
		valore=0
	elif(eusapia[i]==11 and basnulfo==22):
		valore=0
		valorb=1
	elif(eusapia[i]==33 and basnulfo==11):
		valore=0
		valorb=1
	else:
		print("EMPATE")
		somae=somae+valorb
		somab=somab+valore
		i=i+1
print(size(e))
print("EUSAPIA")
print("BARSANULFO")
-- EXECUTION TIME:
638.015
-- ERROR:
Killed

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-28 21:53:02) 
-- CODE:
from numpy import*
eusapia=array(eval(input("digite o numero:")))
barsanulfo=array(eval(input("digite o numero:")))
i=0
valore=0
valorb=0
somae=0
somab=0
while(i<size(eusapia)):
	if(eusapia[i]==33 and barsanulfo[i]==22):
		valore=1
		valorb=0
	elif(eusapia[i]==22 and barsanulfo==11):
		valore=1
		valorb=0
	elif(eusapia[i]==11 and barsanulfo==33):
		valore=1
		valorb=0
	elif(eusapia[i]==22 and barsanulfo[i]==33):
		valorb=1
		valore=0
	elif(eusapia[i]==11 and barsanulfo==22):
		valore=0
		valorb=1
	elif(eusapia[i]==33 and barsanulfo==11):
		valore=0
		valorb=1
	else:
		print("EMPATE")
		somae=somae+valorb
		somab=somab+valore
		i=i+1
print(size(e))
print("EUSAPIA")
print("BARSANULFO")
-- EXECUTION TIME:
633.348
-- ERROR:
Killed

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 08:56:28) 
-- CODE:
from numpy import*
eusapia=array(eval(input("digite o numero:")))
barsanulfo=array(eval(input("digite o numero:")))
i=0
valore=0
valorb=0
somae=0
somab=0
while(i<size(eusapia)):
	if(eusapia[i]==33 and barsanulfo[i]==22):
		valore=1
		valorb=0
	elif(eusapia[i]==22 and barsanulfo==11):
		valore=1
		valorb=0
	elif(eusapia[i]==11 and barsanulfo==33):
		valore=1
		valorb=0
	elif(eusapia[i]==22 and barsanulfo[i]==33):
		valorb=1
		valore=0
	elif(eusapia[i]==11 and barsanulfo==22):
		valore=0
		valorb=1
	elif(eusapia[i]==33 and barsanulfo==11):
		valore=0
		valorb=1
	else:
		print("EMPATE")
		somae=somae+valorb
		somab=somab+valore
		i=i+1
print(size(e))
print("EUSAPIA")
print("BARSANULFO")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 09:03:02) 
-- CODE:
from numpy import*
eusapia=array(eval(input("digite o numero:")))
barsanulfo=array(eval(input("digite o numero:")))
i=0
valore=0
valorb=0
somae=0
somab=0
while(i<size(eusapia)):
	if(eusapia[i]==33 and barsanulfo[i]==22):
		valore=1
		valorb=0
	elif(eusapia[i]==22 and barsanulfo==11):
		valore=1
		valorb=0
	elif(eusapia[i]==11 and barsanulfo==33):
		valore=1
		valorb=0
	elif(eusapia[i]==22 and barsanulfo[i]==33):
		valorb=1
		valore=0
	elif(eusapia[i]==11 and barsanulfo==22):
		valore=0
		valorb=1
	elif(eusapia[i]==33 and barsanulfo==11):
		valore=0
		valorb=1
	else:
		print("EMPATE")
		somae=somae+valorb
		somab=somab+valore
		i=i+1
print(size(e))
print("EUSAPIA")
print("BARSANULFO")
-- EXECUTION TIME:
399.118
-- ERROR:
Killed

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 09:18:34) 
-- CODE:
from numpy import*
eusapia=array(eval(input("digite o numero:")))
barsanulfo=array(eval(input("digite o numero:")))
i=0
somae=0
somab=0
valore=0
valorb=0
while(i<size(eusapia)):
	if(eusapia[i]==33 and barsanulfo[i]==22):
		valore=1
		valorb=0
	elif(eusapia[i]==22 and barsanulfo[i]==11):
		valore=1
		valorb=0
	elif(eusapia[i]==11 and barsanulfo[i]==33):
		valore=1
		valorb=0
	elif(eusapia[i]==22 and barsanulfo[i]==33):
		valorb=1
		valore=0
	elif(eusapia[i]==11 and barsanulfo[i]==22):
		valore=0
		valorb=1
	elif(eusapia[i]==33 and barsanulfo[i]==11):
		valore=0
		valorb=1
	else:
		print("EMPATE")
		somae=somae+valorb
		somab=somab+valore
		i=i+1
print(size(e))
print("EUSAPIA")
print("BARSANULFO")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 10:06:01) 
-- CODE:
from numpy import*
eusapia=array(eval(input("digite o numero:")))
barsanulfo=array(eval(input("digite o numero:")))
i=0
somae=0
somab=0
valore=0
valorb=0
while(i<size(eusapia)):
	if(eusapia[i]==33 and barsanulfo[i]==22):
		valore=1
		valorb=0
	elif(eusapia[i]==22 and barsanulfo==11):
		valore=1
		valorb=0
	elif(eusapia[i]==11 and barsanulfo==33):
		valore=1
		valorb=0
	elif(eusapia[i]==22 and barsanulfo[i]==33):
		valorb=1
		valore=0
	elif(eusapia[i]==11 and barsanulfo==22):
		valore=0
		valorb=1
	elif(eusapia[i]==33 and barsanulfo==11):
		valore=0
		valorb=1
	else:
		print("EMPATE")
		somae=somae+valorb
		somab=somab+valore
		i=i+1
print(size(e))
print("EUSAPIA")
print("BARSANULFO")
-- EXECUTION TIME:
753.357
-- ERROR:
Killed

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 10:11:01) 
-- CODE:
from numpy import*
eusapia=array(eval(input("digite o numero:")))
barsanulfo=array(eval(input("digite o numero:")))
i=0
somae=0
somab=0
valore=0
valorb=0
while(i<size(eusapia)):
	if(eusapia[i]==33 and barsanulfo[i]==22):
		valore=1
		valorb=0
	elif(eusapia[i]==22 and barsanulfo[i]==11):
		valore=1
		valorb=0
	elif(eusapia[i]==11 and barsanulfo[i]==33):
		valore=1
		valorb=0
	elif(eusapia[i]==22 and barsanulfo[i]==33):
		valorb=1
		valore=0
	elif(eusapia[i]==11 and barsanulfo[i]==22):
		valore=0
		valorb=1
	elif(eusapia[i]==33 and barsanulfo[i]==11):
		valore=0
		valorb=1
	else:
		print("EMPATE")
		somae=somae+valorb
		somab=somab+valore
		i=i+1
print(size(e))
print("EUSAPIA")
print("BARSANULFO")
-- EXECUTION TIME:
1115.53
-- ERROR:
Killed

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 10:12:01) 
-- CODE:
from numpy import*
eusapia=array(eval(input("digite o numero:")))
barsanulfo=array(eval(input("digite o numero:")))
i=0
somae=0
somab=0
valore=0
valorb=0
while(i<size(eusapia)):
	if(eusapia[i]==33 and barsanulfo[i]==22):
		valore=1
		valorb=0
	elif(eusapia[i]==22 and barsanulfo[i]==11):
		valore=1
		valorb=0
	elif(eusapia[i]==11 and barsanulfo[i]==33):
		valore=1
		valorb=0
	elif(eusapia[i]==22 and barsanulfo[i]==33):
		valorb=1
		valore=0
	elif(eusapia[i]==11 and barsanulfo[i]==22):
		valore=0
		valorb=1
	elif(eusapia[i]==33 and barsanulfo[i]==11):
		valore=0
		valorb=1
	else:
		print("EMPATE")
		somae=somae+valorb
		somab=somab+valore
		i=i+1
print(size(e))
print("EUSAPIA")
print("BARSANULFO")
-- EXECUTION TIME:
1108.86
-- ERROR:
Killed

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 18:09:15) 
-- CODE:
from numpy import*
eusapia=array(eval(input("digite o numero:")))
barsanulfo=array(eval(input("digite o numero:")))
i=0
somae=0
somab=0
valore=0
valorb=0
while(i<size(eusapia)):
	if(eusapia[i]==33 and barsanulfo[i]==22):
		valore=1
		valorb=0
	elif(eusapia[i]==22 and barsanulfo[i]==11):
		valore=1
		valorb=0
	elif(eusapia[i]==11 and barsanulfo[i]==33):
		valore=1
		valorb=0
	elif(eusapia[i]==22 and barsanulfo[i]==33):
		valorb=1
		valore=0
	elif(eusapia[i]==11 and barsanulfo[i]==22):
		valore=0
		valorb=1
	elif(eusapia[i]==33 and barsanulfo[i]==11):
		valore=0
		valorb=1
	else:
		print("EMPATE")
		somae=somae+valorb
		somab=somab+valore
		i=i+1
print(size(e))
print("EUSAPIA")
print("BARSANULFO")
-- EXECUTION TIME:
624.354
-- TEST CASE 1:
---- input:
[33,22,33,22,11,11,33,22,11,11,22,33]
[22,33,22,11,11,33,22,11,11,22,33,33]
---- correct output:
12
EUSAPIA
---- user output:

-- TEST CASE 2:
---- input:
[33,22,33,11,33,22,11,22,33,11]
[11,33,22,33,11,33,22,11,22,33]
---- correct output:
10
EMPATE
---- user output:
OCI runtime exec failed: exec failed: container_linux.go:296: starting container process caused "process_linux.go:86: executing setns process caused \"exit status 21\"": unknown
-- TEST CASE 3:
---- input:
[33,33,22,11,11,22,33,33,22,11,11,22,33,33,22,11,11,22]
[11,33,33,22,11,11,22,33,33,22,11,11,22,33,33,22,11,11]
---- correct output:
18
BARSANULFO
---- user output:
OCI runtime exec failed: exec failed: cannot exec a container that has stopped: unknown
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 18:09:15) 
-- CODE:
from numpy import*
eusapia=array(eval(input("digite o numero:")))
barsanulfo=array(eval(input("digite o numero:")))
i=0
somae=0
somab=0
valore=0
valorb=0
while(i<size(eusapia)):
	if(eusapia[i]==33 and barsanulfo[i]==22):
		valore=1
		valorb=0
	elif(eusapia[i]==22 and barsanulfo[i]==11):
		valore=1
		valorb=0
	elif(eusapia[i]==11 and barsanulfo[i]==33):
		valore=1
		valorb=0
	elif(eusapia[i]==22 and barsanulfo[i]==33):
		valorb=1
		valore=0
	elif(eusapia[i]==11 and barsanulfo[i]==22):
		valore=0
		valorb=1
	elif(eusapia[i]==33 and barsanulfo[i]==11):
		valore=0
		valorb=1
	else:
		print("EMPATE")
		somae=somae+valorb
		somab=somab+valore
		i=i+1
print(size(e))
print("EUSAPIA")
print("BARSANULFO")
-- EXECUTION TIME:
623.774
-- TEST CASE 1:
---- input:
[33,22,33,22,11,11,33,22,11,11,22,33]
[22,33,22,11,11,33,22,11,11,22,33,33]
---- correct output:
12
EUSAPIA
---- user output:

-- TEST CASE 2:
---- input:
[33,22,33,11,33,22,11,22,33,11]
[11,33,22,33,11,33,22,11,22,33]
---- correct output:
10
EMPATE
---- user output:
OCI runtime exec failed: exec failed: cannot exec a container that has stopped: unknown
-- TEST CASE 3:
---- input:
[33,33,22,11,11,22,33,33,22,11,11,22,33,33,22,11,11,22]
[11,33,33,22,11,11,22,33,33,22,11,11,22,33,33,22,11,11]
---- correct output:
18
BARSANULFO
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 18:09:15) 
-- CODE:
from numpy import*
eusapia=array(eval(input("digite o numero:")))
barsanulfo=array(eval(input("digite o numero:")))
i=0
somae=0
somab=0
valore=0
valorb=0
while(i<size(eusapia)):
	if(eusapia[i]==33 and barsanulfo[i]==22):
		valore=1
		valorb=0
	elif(eusapia[i]==22 and barsanulfo[i]==11):
		valore=1
		valorb=0
	elif(eusapia[i]==11 and barsanulfo[i]==33):
		valore=1
		valorb=0
	elif(eusapia[i]==22 and barsanulfo[i]==33):
		valorb=1
		valore=0
	elif(eusapia[i]==11 and barsanulfo[i]==22):
		valore=0
		valorb=1
	elif(eusapia[i]==33 and barsanulfo[i]==11):
		valore=0
		valorb=1
	else:
		print("EMPATE")
		somae=somae+valorb
		somab=somab+valore
		i=i+1
print(size(e))
print("EUSAPIA")
print("BARSANULFO")
-- EXECUTION TIME:
628.937
-- TEST CASE 1:
---- input:
[33,22,33,22,11,11,33,22,11,11,22,33]
[22,33,22,11,11,33,22,11,11,22,33,33]
---- correct output:
12
EUSAPIA
---- user output:

-- TEST CASE 2:
---- input:
[33,22,33,11,33,22,11,22,33,11]
[11,33,22,33,11,33,22,11,22,33]
---- correct output:
10
EMPATE
---- user output:
OCI runtime exec failed: exec failed: cannot exec a container that has stopped: unknown
-- TEST CASE 3:
---- input:
[33,33,22,11,11,22,33,33,22,11,11,22,33,33,22,11,11,22]
[11,33,33,22,11,11,22,33,33,22,11,11,22,33,33,22,11,11]
---- correct output:
18
BARSANULFO
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 18:09:15) 
-- CODE:
from numpy import*
eusapia=array(eval(input("digite o numero:")))
barsanulfo=array(eval(input("digite o numero:")))
i=0
somae=0
somab=0
valore=0
valorb=0
while(i<size(eusapia)):
	if(eusapia[i]==33 and barsanulfo[i]==22):
		valore=1
		valorb=0
	elif(eusapia[i]==22 and barsanulfo[i]==11):
		valore=1
		valorb=0
	elif(eusapia[i]==11 and barsanulfo[i]==33):
		valore=1
		valorb=0
	elif(eusapia[i]==22 and barsanulfo[i]==33):
		valorb=1
		valore=0
	elif(eusapia[i]==11 and barsanulfo[i]==22):
		valore=0
		valorb=1
	elif(eusapia[i]==33 and barsanulfo[i]==11):
		valore=0
		valorb=1
	else:
		print("EMPATE")
		somae=somae+valorb
		somab=somab+valore
		i=i+1
print(size(e))
print("EUSAPIA")
print("BARSANULFO")
-- EXECUTION TIME:
625.198
-- TEST CASE 1:
---- input:
[33,22,33,22,11,11,33,22,11,11,22,33]
[22,33,22,11,11,33,22,11,11,22,33,33]
---- correct output:
12
EUSAPIA
---- user output:

-- TEST CASE 2:
---- input:
[33,22,33,11,33,22,11,22,33,11]
[11,33,22,33,11,33,22,11,22,33]
---- correct output:
10
EMPATE
---- user output:
OCI runtime exec failed: exec failed: cannot exec a container that has stopped: unknown
-- TEST CASE 3:
---- input:
[33,33,22,11,11,22,33,33,22,11,11,22,33,33,22,11,11,22]
[11,33,33,22,11,11,22,33,33,22,11,11,22,33,33,22,11,11]
---- correct output:
18
BARSANULFO
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 18:09:16) 
-- CODE:
from numpy import*
eusapia=array(eval(input("digite o numero:")))
barsanulfo=array(eval(input("digite o numero:")))
i=0
somae=0
somab=0
valore=0
valorb=0
while(i<size(eusapia)):
	if(eusapia[i]==33 and barsanulfo[i]==22):
		valore=1
		valorb=0
	elif(eusapia[i]==22 and barsanulfo[i]==11):
		valore=1
		valorb=0
	elif(eusapia[i]==11 and barsanulfo[i]==33):
		valore=1
		valorb=0
	elif(eusapia[i]==22 and barsanulfo[i]==33):
		valorb=1
		valore=0
	elif(eusapia[i]==11 and barsanulfo[i]==22):
		valore=0
		valorb=1
	elif(eusapia[i]==33 and barsanulfo[i]==11):
		valore=0
		valorb=1
	else:
		print("EMPATE")
		somae=somae+valorb
		somab=somab+valore
		i=i+1
print(size(e))
print("EUSAPIA")
print("BARSANULFO")
-- EXECUTION TIME:
624.834
-- TEST CASE 1:
---- input:
[33,22,33,22,11,11,33,22,11,11,22,33]
[22,33,22,11,11,33,22,11,11,22,33,33]
---- correct output:
12
EUSAPIA
---- user output:

-- TEST CASE 2:
---- input:
[33,22,33,11,33,22,11,22,33,11]
[11,33,22,33,11,33,22,11,22,33]
---- correct output:
10
EMPATE
---- user output:

-- TEST CASE 3:
---- input:
[33,33,22,11,11,22,33,33,22,11,11,22,33,33,22,11,11,22]
[11,33,33,22,11,11,22,33,33,22,11,11,22,33,33,22,11,11]
---- correct output:
18
BARSANULFO
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 18:09:16) 
-- CODE:
from numpy import*
eusapia=array(eval(input("digite o numero:")))
barsanulfo=array(eval(input("digite o numero:")))
i=0
somae=0
somab=0
valore=0
valorb=0
while(i<size(eusapia)):
	if(eusapia[i]==33 and barsanulfo[i]==22):
		valore=1
		valorb=0
	elif(eusapia[i]==22 and barsanulfo[i]==11):
		valore=1
		valorb=0
	elif(eusapia[i]==11 and barsanulfo[i]==33):
		valore=1
		valorb=0
	elif(eusapia[i]==22 and barsanulfo[i]==33):
		valorb=1
		valore=0
	elif(eusapia[i]==11 and barsanulfo[i]==22):
		valore=0
		valorb=1
	elif(eusapia[i]==33 and barsanulfo[i]==11):
		valore=0
		valorb=1
	else:
		print("EMPATE")
		somae=somae+valorb
		somab=somab+valore
		i=i+1
print(size(e))
print("EUSAPIA")
print("BARSANULFO")
-- EXECUTION TIME:
624.166
-- TEST CASE 1:
---- input:
[33,22,33,22,11,11,33,22,11,11,22,33]
[22,33,22,11,11,33,22,11,11,22,33,33]
---- correct output:
12
EUSAPIA
---- user output:

-- TEST CASE 2:
---- input:
[33,22,33,11,33,22,11,22,33,11]
[11,33,22,33,11,33,22,11,22,33]
---- correct output:
10
EMPATE
---- user output:

-- TEST CASE 3:
---- input:
[33,33,22,11,11,22,33,33,22,11,11,22,33,33,22,11,11,22]
[11,33,33,22,11,11,22,33,33,22,11,11,22,33,33,22,11,11]
---- correct output:
18
BARSANULFO
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
